# litenp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_litenp.cpp  bench_numpy.py  benchmark_manifest.json
cmake/: litenpConfig.cmake.in
docs/: all_features_benchmark_2026-05-25.md  completion_audit.md  design.md  full_benchmark_2026-05-25.md  multi_agent_litenp_audit_2026-05-25.md  performance_completion_audit_2026-05-25.md  performance_goal_pass_2026-05-25.md  performance_matrix_2026-05-25.md  performance_phase1_2026-05-25.md  performance_phase2_2026-05-26.md  performance_phase3_2026-05-26.md  performance_phase5_2026-05-27.md  phase4_approval_gate_2026-05-26.md  status.md
docs/superpowers/specs/: 2026-05-25-litenp-performance-matrix-design.md  2026-05-25-litenp-phase1-kernel-design.md  2026-05-26-litenp-phase2-gemm-design.md  2026-05-26-litenp-phase3-packed-gemm-design.md  2026-05-27-litenp-phase5-verifiable-operator-benchmark-design.md
examples/: basic.cpp
include/litenp/: litenp.hpp
tests/: test_litenp.cpp
tools/: compare_benchmarks.py
